<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PickerActivity">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_toolbar_picker"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="@dimen/toolbar_elevation"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_picker"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/toolbar_elevation"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <com.niraj.sparkprofile.customui.AppTextViewCFS
                android:id="@+id/tv_toolbar_title_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/color_white"
                android:textSize="@dimen/fontsize_20"
                app:textFontFamily="@string/MyRiadProRegular"
                tools:ignore="RelativeOverlap" />
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.niraj.sparkprofile.customui.AppSearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim45dp"
                android:background="@drawable/edittext_bg"
                android:textDirection="locale"
                android:textAlignment="viewStart"
                android:gravity="start|center_vertical"
                android:layoutMode="clipBounds"
                app:iconifiedByDefault="false"
                app:queryHint="@string/search"
                app:searchFontFamily="@string/MyRiadProRegular"
                app:submitBackground="@color/color_white"
                app:queryBackground="@android:color/transparent"
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recyclerview_picker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                tools:listitem="@layout/layout_item_picker" />
        </LinearLayout>
    </android.support.v4.widget.SwipeRefreshLayout>


</LinearLayout>